四数之和 && 赎金信

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,9 @@ project(algorithm)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(algorithm main.cpp
-        src/hashTable/ts/TS1.cpp)
+add_executable(algorithm
+        src/hashTable/ts/TS1.cpp
+        src/hashTable/ts/TS2.cpp
+        src/hashTable/rn/RN383.cpp
+        src/hashTable/ts/TS3.cpp
+)
